# simu-indep

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  README.md  app.py  mypy.ini  pyproject.toml  requirements-dev.txt
.kiro/specs/code-quality-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: development-guidelines.md  project-context.md
simulateur_remuneration/: __init__.py
simulateur_remuneration/calculators/: __init__.py
simulateur_remuneration/models/: __init__.py  simulation.py  tax_models.py  validators.py
simulateur_remuneration/ui/: __init__.py
simulateur_remuneration/utils/: __init__.py
simulateur_remuneration/validators/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_characterization_complete_simulations.py  test_characterization_fiscal_calculations.py  test_tax_models.py
